# prain_uart

./: .gitignore  CMakeLists.txt  README.md  main.tex
include/prain_uart/: crc.hpp  decoder.hpp  encoder.hpp  helper.hpp  protocol.hpp
include/pren_uart/: decoder.hpp  encoder.hpp  protocol.hpp
protocol/: uart_protocol.tex
src/: crc.cpp  decoder.cpp  encoder.cpp  protocol.cpp
test/: main.cpp  unit_tests.cpp
